[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2018"
homepage = "https://substrate.dev"
license = "MIT"
name = "pallet-moloch-v2"
readme = "README.md"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
	"pallet-balances/std",
    "pallet-timestamp/std",
    "sp-timestamp/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16" }

pallet-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16"}

sp-timestamp = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.16"}