[package]
name = "pallet-qf"
version = "4.0.0-dev"
authors = ["DoraFactory Developers <https://github.com/DoraFactory>"]
description = "qunadratic funding pallet"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
[dev-dependencies]
serde = { version = "1.0.136" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", features = ["derive"], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# FRAME library
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.17" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17" }

sp-std = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17"}

pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.17"}

# LOCAL library
dao-core = { git = "https://github.com/DoraFactory/dorafactory-dao-core", branch = "polkadot-v0.9.17", default-features = false }
dao-traits = { git = "https://github.com/DoraFactory/dorafactory-dao-core", branch = "polkadot-v0.9.17", default-features = false }


# ORML library
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master", default-features = false }

primitives = { package = "primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
#    "dao-core/std",
    "frame-benchmarking/std",
    "pallet-balances/std",
    "sp-runtime/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
