[package]
name = "pallet-qf"
version = "4.0.0-dev"
authors = ["DoraFactory Developers <https://github.com/DoraFactory>"]
description = "qunadratic funding pallet"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
hex-literal = "0.3"

# FRAME library
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.22" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22" }
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22"}

# LOCAL library
dao-core = { git = "https://github.com/DoraFactory/dorafactory-dao-core", branch = "polkadot-v0.9.22", default-features = false }
dao-traits = { git = "https://github.com/DoraFactory/dorafactory-dao-core", branch = "polkadot-v0.9.22", default-features = false }

# ORML library
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master", default-features = false }
primitives = { package = "primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde = { version = "1.0.136" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.22" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-balances/std",
    "sp-runtime/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
