[package]
name = "pallet-qf"
version = "0.2.0"
authors = ["DoraFactory Developers <https://github.com/DoraFactory>"]
description = "qunadratic funding pallet"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
hex-literal = "0.3.1"

# FRAME library
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.28" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }

sp-std = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28"}

pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28"}

# LOCAL library
dao-core = { git = "https://github.com/DoraFactory/dorafactory-dao-core", branch = "polkadot-v0.9.28", default-features = false }
dao-traits = { git = "https://github.com/DoraFactory/dorafactory-dao-core", branch = "polkadot-v0.9.28", default-features = false }

# orml xcmp
# ORML Dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.28", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.28", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.28", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", default-features = false, optional = true}
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", default-features = false, optional = true }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.28", default-features = false, optional = true }

primitives = { package = "primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde = { version = "1.0.143" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-balances/std",
    "sp-runtime/std",
    "cumulus-primitives-core/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-parachain-inherent/std",
    "orml-currencies/std",
    "orml-tokens/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
